--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="illustraitain__info">
                 <div class="info">
                     <div class="info__text">
-                        <p>75% save</p>
+                        <span>75% save</span>
                     </div>
                     <div class="info__des">
                         <p>For the Black Friday weekend</p>
@@ -78,6 +78,49 @@
         </div><!--/.illustraitain-->
 
     </div> <!--/.container-->
+
+    <!-- Description -->
+
+    <div class="container">
+
+        <div class="description">
+
+            <div class="description__item">
+
+                <div class="description__image"><img src="img/icon/Bar Chart.svg" alt="Bar Chart"></div>
+
+                <div class="description__item-text">
+                    <h4 class="description--title">$30B</h4>
+                    <p class="description--text">Digital Currency Exchanged</p>
+                </div>
+
+            </div>
+
+            <div class="description__item">
+
+                <div class="description__image"><img src="img/icon/Person.svg" alt="Bar Chart"></div>
+
+                <div class="description__item-text">
+                    <h4 class="description--title">10M+</h4>
+                    <p class="description--text">Trusted Wallets Investor</p>
+                </div>
+
+            </div>
+
+            <div class="description__item">
+
+                <div class="description__image"><img src="img/icon/Earth.svg" alt="Bar Chart"></div>
+
+                <div class="description__item-text">
+                    <h4 class="description--title">195+</h4>
+                    <p class="description--text">Countries Supported</p>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
