--- a/index.html
+++ b/index.html
@@ -118,6 +118,59 @@
 
             </div>
 
+        </div> <!-- /.description -->
+
+    </div> <!-- /.conatiner-->
+
+    <!-- content -->
+
+    <div class="container crypt--block">
+
+        <div class="content">
+
+            <div class="title__block">
+
+                <h2 class="content__title"> Check how much you can earn </h2>
+
+                <p class="content__subtitle">Let’s check your hash rate to see how much you will earn today, <br> Exercitation veniam consequat sunt nostrud amet.</p>
+
+            </div> <!-- /.title__block-->
+
+            <div class="crypt__block">
+
+                <form action=""></form>
+
+                <div class="crypt__title">Trade securely and market the high growth cryptocurrencies.</div>
+
+                <div class="trade__block">
+
+                    <div class="trade__item">
+
+                        <div class="trad__icon">
+                            <img src="img/icon/btc.svg" alt="">
+                        </div>
+
+                        <div class="trade__title">
+                            <h3 class="trade__crypt">Bitcoin</h3>
+
+                            <span class="trade__subtitle"></span>
+
+                            <p class="trade__text">Digital currency in which a record of <br> transactions is maintained.</p>
+                        </div>
+
+                        <button class="btn">
+                            <a href="#">Start mining</a>
+                            <img src="img/icon/arrow.svg" alt="arrow">
+                        </button>
+
+                    </div>
+
+                </div> <!--/.trade__block-->
+
+            </div> <!--/.crypt__block-->
+
+
+
         </div>
 
     </div>
